# django-challenge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
api/: manage.py  setup.py
api/sf_cafe/: asgi.py  settings.py  urls.py  wsgi.py
api/sf_cafe/inventory/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/sf_cafe/inventory/migrations/: 0001_initial.py
api/sf_cafe/menu_items/: apps.py  models.py  serializers.py  urls.py  views.py
api/sf_cafe/menu_items/migrations/: 0001_initial.py
api/sf_cafe/order/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/sf_cafe/order/migrations/: 0001_initial.py  0002_initial.py
api/sf_cafe/report/: apps.py  urls.py  utils.py  views.py
api/sf_cafe/report/jrxml/: report.jrxml
api/sf_cafe/user/: admin.py  apps.py  manager.py  models.py  serializers.py  urls.py  views.py
api/sf_cafe/user/migrations/: 0001_initial.py
frontend/gui/: login.py  main_window.py
frontend/gui/dashboards/: admin_dashboard.py  base_dashboard.py  customer_dashboard.py  employee_dashboard.py
frontend/gui/dashboards/tabs/: customer_tab.py  helper.py  menu_item_tab.py  order_tab.py  report_tab.py
frontend/schemas/: login_schema.py  user_schema.py
